# yann

./: .gitignore  LICENSE  NEWS  README  README.md  autogen.sh  configure-debug.sh  configure-release.sh  configure.ac  run_test.sh
data/: README.txt
src/: Makefile.am  cnn.cpp  cnn.h  convnn.cpp  convnn.h  fcnn.cpp  fcnn.h  functions.cpp  functions.h  layer.cpp  layer.h  nn.cpp  nn.h  nnlayer.cpp  nnlayer.h  nntraining.cpp  nntraining.h  random.cpp  random.h  training.cpp  training.h  types.cpp  types.h  utils.cpp  utils.h
src/core/: dict.cpp  dict.h  functions.cpp  functions.h  layer.cpp  layer.h  nn.cpp  nn.h  random.cpp  random.h  training.cpp  training.h  types.cpp  types.h  updaters.cpp  updaters.h  utils.cpp  utils.h
src/layers/: contlayer.cpp  contlayer.h  convlayer.cpp  convlayer.h  fclayer.cpp  fclayer.h  lstmlayer.cpp  lstmlayer.h  polllayer.cpp  polllayer.h  reclayer.cpp  reclayer.h  s2slayer.cpp  s2slayer.h  smaxlayer.cpp  smaxlayer.h
src/networks/: cnn.cpp  cnn.h  fcnn.cpp  fcnn.h
src/test/: mnist-test.cpp  mnist-test.h  mnist_test.cpp  mnist_test.h  test_cnn.cpp  test_contlayer.cpp  test_convlayer.cpp  test_custom_nn.cpp  test_fclayer.cpp  test_fcnn.cpp  test_functions.cpp  test_layers.cpp  test_layers.h  test_lstmlayer.cpp  test_polllayer.cpp  test_reclayer.cpp  test_rnn.cpp  test_s2s.cpp  test_s2slayer.cpp  test_smaxlayer.cpp  test_types.cpp  test_updaters.cpp  test_utils.cpp  test_utils.h  test_word2vec.cpp  timer.cpp  timer.h
src/word2vec/: text_parser.cpp  text_parser.h  word2vec.cpp  word2vec.h
